--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,6 +7,7 @@
   margin-top: 10% !important;
     background-color: #ffffffa8;
 }
+
 .container1 {
     width: 550px !important;
     margin-top: 1% !important;
@@ -35,6 +36,10 @@
   width: 900px !important;
   margin-top: 30px !important;
 
+}
+#addCr_container{
+  width: 600px !important;
+  margin-top: 10px !important;
 }
 
 #cr_container{
