--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,6 +1,7 @@
 .container {
 
-
+  width: 550px !important;
+  margin-top: 10% !important;
 }
 #login_container{
   width: 550px !important;
@@ -15,6 +16,11 @@
 .navbar-inverse {
     background-color: #644bef !important;
     border-color: #ffffff !important;
+}
+
+nav.navbar.navbar-inverse {
+  background-color: #644bef !important;
+  border-color: #ffffff !important;
 }
 .navbar-inverse .navbar-nav>.active>a {
     color: #fff !important;
@@ -46,6 +52,11 @@
   width:1000px !important;
   margin-top: 30px !important;
 
+}
+#editAdmin_container{
+  width: 750px !important;
+  margin-top: 10px !important;
+      border: 15px solid #644bef !important;
 }
 #edit_profile_container{
   width: 470px !important;
