--- a/src/css/common.css
+++ b/src/css/common.css
@@ -34,6 +34,10 @@ nav.navbar.navbar-inverse {
   width: 900px !important;
   margin-top: 30px !important;
 }
+#add_view_container{
+  width: 900px !important;
+  margin-top: 30px !important;
+}
 #register_container{
   width: 700px !important;
   margin-top: 40px !important;
